# mips-baremetal-test

./: CMakeLists.txt  argc-argv-envp.c  helloworld.cpp
